--- a/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
@@ -31,7 +31,32 @@
 	.home-new-collection .section-title h2#product-highlight-heading {
 		color: #5F5F5D;
 	}
-
+	.home-banner .container h3{
+		color: #333;
+		border-bottom: 1px solid #333;
+	}
+	.home-new-collection .sectionIntro .section-contents{
+	    border: none;
+	    padding-bottom: 50px;
+    	padding-top: 80px;
+	}
+	.home-new-collection{
+		background-color: #949494;
+		padding: 0 0px 15px;
+		margin: 0 auto 0;
+	}
+	.home-find-store{
+		background: transparent url(../img/eggstar-bg.jpg);
+		margin: 0 auto 0;
+    	padding: 70px 0px 50px;
+	}
+	.home-banner{
+		background: transparent url(../img/eggstar-bg.jpg);
+		padding-bottom: 80px;
+		.container{
+			margin-bottom: 0;
+		}
+	}
 }
 
 .page-template-template-eggstar-stores{
