--- a/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
@@ -13,11 +13,28 @@
  	}
 
  	.expend-btn{
-		position: relative;
+/*		position: relative;
 		float: none;
 		margin: 0;
 		margin-left: 10px;
-		top: 8px;
+		top: 8px;*/
+		position: relative;
+		float: none;
+		display: block;
+		font-size: 14px;
+		color: #666666;
+		width: 185px;
+		background-position: right center;
+		background-repeat: no-repeat;
+		    background-size: initial;
+		padding-top: 5px;
+		margin-left: 0;
+		font-weight: bold;
+		text-decoration: none;
+		    background-image: url(../img/icon-expend-small.png);
+		&:hover{
+			text-decoration: none;
+		}
  	}
 
  	.career-section-container{
@@ -93,6 +110,14 @@
  		    	color:#664400;
  		    }
  	}
+}
+
+.zh-hant,.zh-hans{
+	#career-page{
+		.expend-btn {
+			    width: 120px;
+		}
+	}
 }
 //===============================================================================
 //===============================================================================
