--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -86,7 +86,7 @@
 				color:#f8b03a!important;
 			}
 		}
-		#menu-primary-navigation,#menu-primary-navigation-chinese-traditional,#menu-primary-navigation-chinese-simplified{
+		#menu-primary-navigation,#menu-primary-navigation-chinese-traditional,#menu-primary-navigation-chinese-simplified,#menu-egg-star-main-menu{
 		  float: none;
 		  text-align: center;
 		  margin: 0 auto;
