--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -7720,11 +7720,29 @@ figure.alignnone {
   text-align: center;
 }
 #career-page .expend-btn {
+  /*		position: relative;
+		float: none;
+		margin: 0;
+		margin-left: 10px;
+		top: 8px;*/
   position: relative;
   float: none;
-  margin: 0;
-  margin-left: 10px;
-  top: 8px;
+  display: block;
+  font-size: 14px;
+  color: #666666;
+  width: 185px;
+  background-position: right center;
+  background-repeat: no-repeat;
+  -webkit-background-size: initial initial;
+          background-size: initial;
+  padding-top: 5px;
+  margin-left: 0;
+  font-weight: bold;
+  text-decoration: none;
+  background-image: url(../img/icon-expend-small.png);
+}
+#career-page .expend-btn:hover {
+  text-decoration: none;
 }
 #career-page .career-section-container {
   margin-bottom: 40px;
@@ -7802,6 +7820,10 @@ figure.alignnone {
 }
 #career-page .career-text-after-box a {
   color: #664400;
+}
+.zh-hant #career-page .expend-btn,
+.zh-hans #career-page .expend-btn {
+  width: 120px;
 }
 @media (min-width: 768px) {
   #career-page h4 {
@@ -8082,7 +8104,8 @@ figure.alignnone {
 }
 .navbar-default .nav-container #menu-primary-navigation,
 .navbar-default .nav-container #menu-primary-navigation-chinese-traditional,
-.navbar-default .nav-container #menu-primary-navigation-chinese-simplified {
+.navbar-default .nav-container #menu-primary-navigation-chinese-simplified,
+.navbar-default .nav-container #menu-egg-star-main-menu {
   float: none;
   text-align: center;
   margin: 0 auto;
@@ -8316,7 +8339,7 @@ figure.alignnone {
   padding-top: 80px;
 }
 .eggstar .home-new-collection {
-  background-color: #949494;
+  background-color: #93908b;
   padding: 0 0px 15px;
   margin: 0 auto 0;
 }
@@ -8331,6 +8354,18 @@ figure.alignnone {
 }
 .eggstar .home-banner .container {
   margin-bottom: 0;
+}
+.eggstar .home-find-store img {
+  /* IE 8 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  /* IE 5-7 */
+  filter: alpha(opacity=90);
+  /* Netscape */
+  -moz-opacity: 0.9;
+  /* Safari 1.x */
+  -khtml-opacity: 0.9;
+  /* Good browsers */
+  opacity: 0.9;
 }
 .page-template-template-eggstar-stores .navbar-default {
   background-color: rgba(0, 0, 0, 0.9);
