--- a/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
@@ -41,7 +41,7 @@
     	padding-top: 80px;
 	}
 	.home-new-collection{
-		background-color: #949494;
+		background-color: #93908b;
 		padding: 0 0px 15px;
 		margin: 0 auto 0;
 	}
@@ -56,6 +56,22 @@
 		.container{
 			margin-bottom: 0;
 		}
+	}
+	.home-find-store img{
+		 /* IE 8 */
+		  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+
+		  /* IE 5-7 */
+		  filter: alpha(opacity=90);
+
+		  /* Netscape */
+		  -moz-opacity: 0.9;
+
+		  /* Safari 1.x */
+		  -khtml-opacity: 0.9;
+
+		  /* Good browsers */
+		  opacity: 0.9;
 	}
 }
 
