--- a/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
@@ -10,6 +10,7 @@
  	h4{
  		font-weight: bold;
     	text-align: center;
+    	font-size: 21px;
  	}
 
  	.expend-btn{
@@ -28,13 +29,14 @@
 		width:auto;
 		background-position: right center;
 		background-repeat: no-repeat;
-		    background-size: initial;
+		background-size: inherit;
 		padding-top: 5px;
 		margin-left: 0;
 		font-weight: bold;
 		text-decoration: none;
-		    background-image: url(../img/icon-expend-small.png);
-		    padding-right: 30px;
+		background-image: url(../img/icon-expend-small.png);
+		padding-right: 30px;
+		outline: none;
 		em{
 			    font-style: normal;
 		}
