--- a/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
@@ -36,14 +36,15 @@
 		border-bottom: 1px solid #333;
 	}
 	.home-new-collection .sectionIntro .section-contents{
-	    border: none;
+	    //border: none;
 	    padding-bottom: 50px;
     	padding-top: 80px;
 	}
 	.home-new-collection{
-		background-color: #93908b;
+		/*background-color: #93908b;*/
 		padding: 0 0px 15px;
-		margin: 0 auto 0;
+		margin: 10px auto 0;
+		    margin-bottom: 40px;
 	}
 	.home-find-store{
 		background: transparent url(../img/eggstar-bg.jpg);
