--- a/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_eggstar.less
@@ -76,7 +76,7 @@
 	}
 }
 
-.page-template-template-eggstar-stores{
+.page-template-template-eggstar-stores,.single-eggstar_product{
 	.navbar-default{
 		background-color: rgba(0, 0, 0, 0.9);
 
@@ -90,6 +90,21 @@
 			}
 		}
 	}
+}
+
+.single-eggstar_product .navbar-default .nav-container li.eggstar-collection-chi-menu-link a{
+	color: #99E5FF!important;
+}
+
+.page-template-template-eggstar-stores .slick-slider .slick-track{
+	margin: 0 auto;
+}
+
+//prevent the page links under eggstar home to change to orange
+.parent-pageid-2872 .navbar-default .nav-container li.active.menu-home a,
+.parent-pageid-2880 .navbar-default .nav-container li.active.menu-egg a,
+.parent-pageid-2878 .navbar-default .nav-container li.active.menu-egg a{
+	color: #fff!important;
 }
 
 //===============================================================================
