--- a/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_careers.less
@@ -123,6 +123,12 @@
  	}
 }
 
+.img-career{
+	display: block;
+    width: 100%;
+    height: auto;
+}
+
 /*.zh-hant,.zh-hans{
 	#career-page{
 		.expend-btn {
@@ -185,7 +191,9 @@
 	  		}
 	  	}
 	}
-
+	.img-career{
+		width:auto;
+	}
 }
 //===============================================================================
 //===============================================================================
