--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -201,7 +201,7 @@
 	    li{
 			display: inline-block;
 				a{  
-					padding: 10px 12px; 
+					padding: 10px 10px; 
 				}
 			&:last-child a{padding-right:0; }
 			&:first-child a{padding-left:0; }
@@ -260,7 +260,7 @@ nav.collapse.navbar-collapse.mobile-language-selector-wrapper{display:none !impo
 		li{
 			display: inline-block;
 				a{  
-					padding: 10px 10px; 
+					padding: 10px 6px; 
 				}
 		}
 		.main-menu{
@@ -303,7 +303,9 @@ nav.collapse.navbar-collapse.mobile-language-selector-wrapper{display:none !impo
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-lg-min) {
-
+.navbar-default .nav-container li a {
+    padding: 10px 10px;
+}
 /*.main{
    position: initial;
    top: 0px;
